--- a/style.css
+++ b/style.css
@@ -79,24 +79,30 @@ header {
 }
 .featured-content-box{
     display: flex;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
     gap: 25px;
+    flex-direction: row
 }
 .featured-content-colum{
-    width: 464px;
-    height: 538px;
+    width: 460px;
+    height: 540px;
     border-radius: 300px 300px 0px 0px;
+    align-items: center;
 }
+.featured-content-colum img{
+    padding: 110px 0px 80px 80px;
+}
+
 .box1{
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
 }
 .box2{
     border-radius: 300px 300px 0px 0px;
-    background: rgba(167, 33, 98, 0.15);
+    background: rgba(5, 151, 160, 0.15);
 }
 .box3{
     border-radius: 300px 300px 0px 0px;
-    background: rgba(167, 33, 98, 0.15);
+    background: rgba(71, 125, 17, 0.15);
 }
