--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ header {
 .featured-content-colum{
     width: 460px;
     height: 540px;
-    border-radius: 300px 300px 0px 0px;
+    /* border-radius: 300px 300px 40px 40px; */
     align-items: center;
 }
 .featured-content-colum img{
@@ -105,4 +105,42 @@ header {
 .box3{
     border-radius: 300px 300px 0px 0px;
     background: rgba(71, 125, 17, 0.15);
+}
+
+.img-info-item{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+}
+.img-info{
+    color: #272727;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    text-decoration-line: underline;
+    margin-top: 30px;
+}
+/* rectangle section css */
+.rectangle-item-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+    border-radius: 10px;
+    text-align: center;
+}
+.rectangle-content {
+    background: #2727270D;
+    margin: 130px 150px;
+}
+.rectangle-item {
+    padding: 0px 54px;
+}
+.rectangle-item p{
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 20px;
 }
