--- a/style.css
+++ b/style.css
@@ -172,3 +172,32 @@ header {
 .deal-btn{
     margin-top: 20px;
 }
+
+/* instagram section css */
+.instagram-container{
+    margin: 100px 0px 50px 0px;
+    padding: -0px 50px;
+}
+.instagram-title{
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+}
+.instagram-des{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-bottom: 30px;
+}
+.instagram-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+.instagram-img-item{
+    border-radius: 10px;
+}
